# kursovv

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
data/: hh.py  vacancies.json
src/api/: abstract_api.py  hh_api.py
src/storage/: abstract_storage.py  json_storage.py
src/utils/: utils.py
src/vacancy/: vacancy.py
tests/: .coverage  conftest.py  test_api.py  test_storage.py  test_utils.py  test_vacancy.py
