[tool.poetry]
name = "hh-vacancies-project"
version = "0.1.0"
description = "Integration with HH.ru API for vacancies"
authors = ["Your Name <email@example.com>"]
package-mode = false  # Отключаем упаковку

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
